Opened 19 years ago

Closed 18 years ago

#485 closed bug (fixed)

[E-mail] pref crash

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: System/runtime_loader Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

E-mail from MDR crash. Steps to reproduce: Launch E-mail->Add->Unnamed->Inbound&Outbound Now selectin Incoming or Outcoming item in listview will crash e-mail.

Change History (4)

comment:1 by diver, 19 years ago

Thread 283 caused an exception: Segment violation Reading symbols from /boot/beos/system/lib/libbe.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libbe.so Reading symbols from /boot/beos/system/lib/libmail.so...(no debugging symbols found)...done. Loaded symbols for /boot/beos/system/lib/libmail.so Reading symbols from /boot/beos/system/lib/libroot.so...done. Loaded symbols for /boot/beos/system/lib/libroot.so Reading symbols from /boot/beos/system/lib/libstdc++.hrev4.so...done. Loaded symbols for /boot/beos/system/lib/libstdc++.hrev4.so Reading symbols from /boot/beos/system/lib/libtextencoding.so...done. Loaded symbols for /boot/beos/system/lib/libtextencoding.so Reading symbols from /boot/beos/system/lib/libtracker.so...done. Loaded symbols for /boot/beos/system/lib/libtracker.so Reading symbols from /boot/beos/system/lib/libnetwork.so...done. Loaded symbols for /boot/beos/system/lib/libnetwork.so Reading symbols from /boot/beos/system/lib/libtranslation.so...done. Loaded symbols for /boot/beos/system/lib/libtranslation.so

[Switching to team /BeBox/beos/preferences/E-mail (279) thread E-mail (283)] 0x001056f7 in ?? () (gdb) bt #0 0x001056f7 in ?? () #1 0x7003f56c in ?? () #2 0x00000003 in ?? () #3 0x7003f96c in ?? () #4 0x001017a8 in ?? () #5 0x7003f56c in ?? () #6 0x00000000 in ?? () #7 0x00000400 in ?? () #8 0x0010174d in ?? () #9 0x0011020c in ?? ()

comment:2 by axeld, 18 years ago

Description: modified (diff)
Platform: All

I can't reproduce this - does it still happen?

comment:3 by axeld, 18 years ago

Sorry, wrong ticket - I can reproduce this one!

comment:4 by axeld, 18 years ago

Component: - GeneralSystem/runtime_loader
Resolution: fixed
Status: newclosed

It called load_add_on() with a NULL pointer path which it didn't like - it now does since hrev19941.

Note: See TracTickets for help on using tickets.