* Made all exported safe against NULL pointers, this fixes bug #485. * Slightly improved error codes.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19941 a95241bf-73f2-0310-859d-f6bbb57e9c96